# xorq-style

./: .envrc  .gitignore.template  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: review-structural.md
.envrcs/: .envrc.secrets.template  .envrc.user.template  .envrc.user.uv  README.md
.github/workflows/: ci-lint.yml  ci-pre-release.yml  ci-test-install.yml  ci-test.yml  publish.yml
src/xorq_style/: __init__.py  __main__.py  check.py  compat.py  enums.py
tests/: test_check.py
