[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xorq-style"
version = "0.1.0"
description = "Shared style enforcement and Claude Code tooling for xorq Python projects"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "click>=8.1",
    "tomli; python_version < '3.11'",
]

[project.scripts]
xorq-check-style = "xorq_style.check:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "F",       # pyflakes
    "I",       # isort
    "UP",      # pyupgrade
    "B",       # flake8-bugbear
    "SIM",     # flake8-simplify
    "TCH",     # flake8-type-checking
    "RUF",     # ruff-specific
    "C4",      # flake8-comprehensions
    "FURB",    # refurb
    "ICN",     # import conventions
    "PLC0415", # import-outside-toplevel
]

[tool.ruff.lint.isort]
known-first-party = ["xorq_style"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.xorq-style]
disable = []

[tool.xorq-style.print]
allow-files = ["cli.py", "check.py"]

[dependency-groups]
dev = [
    "ipython>=8.39.0",
    "mypy",
    "pre-commit",
    "pytest",
    "ruff",
]
